--- a/index.html
+++ b/index.html
@@ -6,9 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Star Wars GIFs</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 <body>
-    
+    <div class="row justify-content-center">
+        <div class="col-12 justify-content-center text-center">
+            <h1>STAR</h1>
+            <h1 class="star-wars-font">WARS</h1>
+            <p class="subtitle">GIF Generator</p>
+        </div>
+    </div>
+
+    <div class="row justify-content-center">
+        <div class="col-sm-10 col-md-3">
+            <form class="form-inline justify-content-center">
+                <input type="text" class="form-control" id="user-input">
+                <button class="btn btn-danger" id="create-btn">Test</button>
+            </form>
+        <p class="justify-content-center text-center">Add your own Star Wars button!</p>
+        </div>
+    </div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
