Finished html build with comments for jQuery added elements. Next will pseudocode outline the app.js doc.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
         </div>
     </div>
 
+    <div class="container-fluid" id="button-container">
+        <!-- Buttons will go here. Each should be col-lg-1 col-md-2 and col-sm-3 -->
+    </div>
+
+    <div class="container-fluid" id="gif-container">
+        <!-- Gifs generated will go here. Each should be wrapped in it's own col-sm-12 col with fixed_height_still -->
+    </div>
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
