--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
 
     <div class="row justify-content-center">
-        <div class="col-sm-10 col-md-3">
-            <form class="form-inline justify-content-center">
+        <div class="col-sm-10 col-md-3 drop-width">
+            <form class="form-inline justify-content-center" id="new-btn-form">
                 <input type="text" class="form-control" id="user-input">
                 <button class="btn btn-danger" id="create-btn">Test</button>
             </form>
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="container-fluid" id="button-container">
+    <div class="container-fluid justify-content-center" id="button-container">
         <!-- Buttons will go here. Each should be col-lg-1 col-md-2 and col-sm-3 -->
     </div>
 
