--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <title>Star Wars GIFs</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
 </head>
 <body>
+
+    <audio id="saber">
+        <source src="assets/audio/SaberOn.mp3" type="audio/mp3">
+    </audio>
+
     <div class="row justify-content-center">
         <div class="col-12 justify-content-center text-center">
             <h1>STAR</h1>
@@ -21,9 +27,9 @@
         <div class="col-sm-10 col-md-3 drop-width">
             <form class="form-inline justify-content-center" id="new-btn-form">
                 <input type="text" class="form-control" id="user-input">
-                <button class="btn btn-danger" id="create-btn">Test</button>
+                <button class="btn btn-danger" id="create-btn">Add</button>
             </form>
-        <p class="justify-content-center text-center">Add your own Star Wars button!</p>
+        <p class="justify-content-center text-center label-text">Add your own Star Wars button!</p>
         </div>
     </div>
 
